--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       SPOTIFY_CLIENT_ID: #####
       SPOTIFY_CLIENT_SECRET: #####
       SPOTIFY_USERNAME: #####
+      SPOTIFY_REDIRECT_URL: #####
   mysql:
     image: mysql:latest
     environment:
